# soil-sensor-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  build.sh
.cargo/: config.toml
.github/workflows/: rust_ci.yml
src/: main.rs
