[package]
name = "soil-sensor-rust"
version = "0.1.0"
authors = ["blast461 <blast461@msn.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "soil-sensor-rust"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

[dependencies]
log = "0.4"
anyhow = "1.0"
esp-idf-sys = { version = "0.36.1", features = ["binstart"] }
esp-idf-svc = { version = "0.51", default-features = false, features = ["std"] }
esp-idf-hal = "0.45"

[build-dependencies]
embuild = "0.33"
